[package]
name = "ps-compress"
version = "0.1.0-17"
edition = "2021"
description = "Object wrapper around Zstandard compression"
documentation = "https://docs.rs/ps-compress"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["compression", "deterministic", "storage", "zstd"]
categories = ["compression", "encoding"]

[dependencies]
ps-buffer = "0.1.0-21"
thiserror = "2.0.18"

[dependencies.zstd-safe]
version = "=7.2.4"
default-features = false

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
